# kragle

./: .gitattributes  .gitignore  .yamllint  Cargo.toml  README.md
.github/workflows/: rust.yml
kraglefile/: kragle-repo.yaml  kragle-rust-simpleA.yaml  kragle-rust-simpleB.yaml  manifest.sh  manifest.yaml  slick-portfolio-svelte.yaml  validation.sh
src/: cache.rs  dialog.rs  globals.rs  lib.rs  main.rs  manifest.rs  repo.rs
