[package]
name = "kragle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base85 = "2.0.0"
clap = {version = "4.5.40", features = ["derive"] }
console = "0.15.11"
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = "0.4.27"
md5 = "0.7.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
terminal_size = "0.4.2"
xz2 = "0.1.7"

[dev-dependencies]
cargo-husky = { version="1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]}
tempfile = "3.20.0"
